--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
 <div class="Container">
-<div class="left">
+<div class="left" id="none">
     <i class='bx bx-message-rounded-minus X'></i>
     <i class='bx bxs-phone-call X' ></i>    
     <i class='bx bx-podcast X'></i>
@@ -43,44 +43,44 @@
         <div class="photo together"></div>
         <div class="nameU ">
 <h2>NนƬ૯ℒℒΔ 🍫🍩</h2>
-<p>Lorem, ipsum dolor.</p>
+<p>I love you Ammar 🌚❤️</p>
         </div>
      </div>
      <div class="user">
         <div class="photo Zyad"></div>
         <div class="nameU">
             <h2>Zyad Khalaf</h2>
-            <p>Lorem, ipsum dolor.</p>
+            <p>Where are you my brother 🤔</p>
                     </div>     </div>
      <div class="user">
         <div class="photo deaa"></div>
         <div class="nameU">
             <h2>Deaa Essam</h2>
-            <p>Lorem, ipsum dolor.</p>
+            <p>My brother Ibrahim 😂✌🏻️</p>
                     </div>     </div>
      <div class="user">
         <div class="photo abdo"></div>
         <div class="nameU">
             <h2>Abdo Mahmoud</h2>
-            <p>Lorem, ipsum dolor.</p>
+            <p>Okay I will come 👍🏼</p>
                     </div>     </div>
      <div class="user">
         <div class="photo shref"></div>
         <div class="nameU">
             <h2>Shrief Ashraf</h2>
-            <p>Lorem, ipsum dolor.</p>
+            <p>typing . . .</p>
                     </div>     </div>
      <div class="user">
         <div class="photo Ahmed"></div>
         <div class="nameU">
             <h2>Ahmed Fayez</h2>
-            <p>Lorem, ipsum dolor.</p>
+            <p>How are you</p>
                     </div>     </div>
      <div class="user">
         <div class="photo yahya"></div>
         <div class="nameU">
             <h2>Yahya Atef</h2>
-            <p>Lorem, ipsum dolor.</p>
+            <p>Hey hacker 💪🤍</p>
                     </div>     </div>
      <div class="user">
         <div class="photo"></div>
